@@ -11,6 +11,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,39 +24,45 @@ public class AuditServiceImpl implements AuditService {
         return auditRepository.findAll()
                 .stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public AuditResponse getAuditById(Long id) {
         Audit audit = auditRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("Audit not found"));
+                .orElseThrow(() -> new NoSuchElementException("Audit not found with ID: " + id));
         return mapToResponse(audit);
     }
 
     @Override
     public AuditResponse closeAudit(Long id, CloseAuditRequest request) {
         Audit audit = auditRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("Audit not found"));
+                .orElseThrow(() -> new NoSuchElementException("Audit not found with ID: " + id));
 
+        // Update findings if provided in the request
         if (request.getFindings() != null && !request.getFindings().isBlank()) {
             audit.setFindings(request.getFindings());
         }
 
+        // Set status to Inactive/Closed as per business logic
         audit.setStatus(StatusBasic.Inactive);
 
         Audit savedAudit = auditRepository.save(audit);
         return mapToResponse(savedAudit);
     }
 
+    /**
+     * Converts Audit Entity to AuditResponse DTO using Builder pattern.
+     * This avoids "Incompatible Types" errors caused by field ordering.
+     */
     private AuditResponse mapToResponse(Audit audit) {
-        return new AuditResponse(
-                audit.getId(),
-                audit.getOfficer() != null ? audit.getOfficer().getId() : null,
-                audit.getScope(),
-                audit.getFindings(),
-                audit.getCreatedAt(),
-                audit.getStatus()
-        );
+        return AuditResponse.builder()
+                .id(audit.getId())
+                .officerId(audit.getOfficer() != null ? audit.getOfficer().getId() : null)
+                .scope(audit.getScope())
+                .findings(audit.getFindings())
+                .status(audit.getStatus())
+                .createdAt(audit.getCreatedAt())
+                .build();
     }
 }
